--- a/app/views/entities/_export_condition.html.haml
+++ b/app/views/entities/_export_condition.html.haml
@@ -13,18 +13,17 @@
     =hidden_field_tag("conditions[#{id}][type]", condition)
     .param
       =check_box_tag("conditions[#{id}][use_timestamp]")
-      =tc("created_between", :started_on=>date_field_tag("conditions[#{id}][timestamp][started_on]", Date.today-6), :stopped_on=>date_field_tag("conditions[#{id}][timestamp][stopped_on]")).html_safe
+      =tc("created_between", :started_on=>date_field_tag("conditions[#{id}][timestamp][started_on]", Date.today-6), :stopped_on=>date_field_tag("conditions[#{id}][timestamp][stopped_on]", Date.today)).html_safe
     -if condition == "special-subscriber"
       .param
         -for nature in @current_company.subscription_natures
-          =radio_button_tag("conditions[#{id}][nature]", nature.id, params[:conditions][id][:nature] == nature.id.to_s, :id=>"conditions_#{id}_nature_#{nature.id}")
+          =radio_button_tag("conditions[#{id}][nature]", nature.id, params[:conditions][id][:nature] == nature.id.to_s, :id=>"conditions_#{id}_nature_#{nature.id}", "data-show"=>"#conditions_#{id}_nature_#{nature.id}_detail")
           %label{:for=>"conditions_#{id}_nature_#{nature.id}"}=h(nature.name)
-          =observe_field("conditions_#{id}_nature_#{nature.id}", :frequency =>0.25, :function => "toggleElement('conditions_#{id}_nature_#{nature.id}_detail', element.checked);")
       -for nature in @current_company.subscription_natures
         %div{:id=>"conditions_#{id}_nature_#{nature.id}_detail", :style=>'display:none'}
           .param
             =check_box_tag("conditions[#{id}][#{nature.id}][use_subscribed_on]", "1", true)
-            =tc("subscriber_#{nature.nature}", :subscribed_on=>(nature.period? ? date_field_tag("conditions[#{id}][#{nature.id}][subscribed_on]") : text_field_tag("conditions[#{id}][#{nature.id}][subscribed_on]", nature.actual_number, :size=>8))).html_safe
+            =tc("subscriber_#{nature.nature}", :subscribed_on=>(nature.period? ? date_field_tag("conditions[#{id}][#{nature.id}][subscribed_on]", Date.today) : text_field_tag("conditions[#{id}][#{nature.id}][subscribed_on]", nature.actual_number, :size=>8))).html_safe
           .param
             -for product in nature.products
               =check_box_tag("conditions[#{id}][#{nature.id}][products][#{product.id}]", "1", true, :id=>"conditions_#{id}_#{nature.id}_products_#{product.id}")
@@ -43,7 +42,7 @@
           =text_field_tag("conditions[#{id}][comparated]")
         -elsif column.type == :date
           =select_tag("conditions[#{id}][comparator]", options_for_select([["est supérieur(e) à", :gt], ["est supérieur(e) ou égal(e) à", :ge], ["est égal(e) à", :eq], ["est inférieur(e) ou égal(e) à", :le], ["est inférieur(e)", :lt]]))
-          =date_field_tag("conditions[#{id}][comparated]")
+          =date_field_tag("conditions[#{id}][comparated]", Date.today)
         -elsif column.type == :boolean
           =select_tag("conditions[#{id}][comparator]", options_for_select([["est vrai", :is_true], ["est faux", :is_false]]))
         -else
