--- a/app/views/entities/export.html.haml
+++ b/app/views/entities/export.html.haml
@@ -40,7 +40,7 @@
         -f.field tc('check'), {:choices=>[[tc(:all_conditions), :and], [tc(:one_condition), :or]], :datatype=>:radio, :name=>:check, :value=>params[:check]||:and}
       .fastadd
         =select_tag("condition", options_for_select(@conditions.collect{|x| [condition_label(x), x]}))
-        =link_to_remote(tc(:add_condition), :update=>:conditions, :position=>:bottom, :url=>{:action=>:export}, :with=>"'condition='+$('condition').value")
+        =link_to(tc(:add_condition), {:action=>:export}, :remote=>true, "data-update"=>"#conditions", "data-update-at"=>:bottom, "data-type"=>:html, "data-with"=>"#condition")
       #conditions
       .end
   .actions
