--- a/app/views/accounts/mark.html.haml
+++ b/app/views/accounts/mark.html.haml
@@ -34,30 +34,21 @@
           %tr{:id=>trid, :class=>(line.closed? ? "disabled " : checked ? "notice " : "")+cycle("even", "odd")}
             %td.chk
               -if line.letter.blank? and not line.closed?
-                =check_box_tag("journal_entry_line[#{line.id}][to_mark]", "1", checked, :onclick =>"if(this.checked) {$('#{trid}').addClassName('notice');} else {$('#{trid}').removeClassName('notice');}; t2();", :id=>"journal_entry_line_#{line.id}_to_mark" )
-                -conf = {:class=>"clickable", :onclick=>"toggleCheckBox('journal_entry_line_#{line.id}_to_mark')", "data-check"=>"journal_entry_line_#{line.id}_to_mark"}
+                =check_box_tag("journal_entry_line[#{line.id}][to_mark]", "1", checked, :id=>"journal_entry_line_#{line.id}_to_mark", "data-add-class"=>"notice", "data-add-class-to"=>"##{trid}")
+                -conf = {"data-click"=>"#journal_entry_line_#{line.id}_to_mark"}
               -else
                 =line.letter
             %td.act=link_to(image_tag(theme_button(:unmark), :border=>0), {:action=>:unmark, :id=>@account.id, :letter=>line.letter}, :method=>:post, :confirm=>tg(:are_you_sure)) unless line.letter.blank? or line.closed?
             %td.dat{conf}=I18n.localize(line.entry.printed_on)
-            %td=link_to(line.journal.name, {:action=>:show, :controller=>:journals, :id=>line.journal_id}, :keep=>true)
-            %td.code=link_to(line.entry.number, {:action=>:show, :controller=>:journal_entries, :id=>line.entry_id}, :keep=>true)
+            %td{conf}=link_to(line.journal.name, {:action=>:show, :controller=>:journals, :id=>line.journal_id}, :keep=>true)
+            %td.code{conf}=link_to(line.entry.number, {:action=>:show, :controller=>:journal_entries, :id=>line.entry_id}, :keep=>true)
             %td{conf}=line.name
             %td.dec.debit{conf}=number_to_accountancy(line.debit)
             %td.dec.credit{conf}=number_to_accountancy(line.credit)
-        %tr#total.total
+        %tr#total.total{"data-valid-if-equality-between"=>"#total-debit, #total-credit"}
           %th{:colspan=>6}=tg(:total)
-          %td#total-debit=0
-          %td#total-credit=0
+          %td#total-debit{"data-use"=>"tr.notice .debit"}=0
+          %td#total-credit{"data-use"=>"tr.notice .credit"}=0
     .end
   .actions=submit_tag tg(:save)
-  
-:javascript
-  window.t2 = function() {
-    var sd = sum_all('tr.notice .debit',  'total-debit');
-    var sc = sum_all('tr.notice .credit', 'total-credit');
-    var total = set_state('total', (sd.innerHTML*1 === sc.innerHTML*1));
-    return total;
-  }
-  t2();
 
