--- a/app/views/entities/merge.html.haml
+++ b/app/views/entities/merge.html.haml
@@ -1,6 +1,8 @@
 =form_tag do
   =formalize do |f|
-    -f.field tc(:entity_to_update), dyli_tag(:master, :entities, :controller=>:interfacers)
-    -f.field tc(:entity_to_delete), dyli_tag(:double, :entities, :controller=>:interfacers)
+    -f.field tc(:entity_to_update), combo_box_tag(:master, :entities, :controller=>:interfacers)
+    -f.field tc(:entity_to_delete), combo_box_tag(:double, :entities, :controller=>:interfacers)
+  =toolbar do |t|
+    -t.link :permute, {:action=>:merge}, "data-permute-combo-box"=>"#master, #double"
   .actions
     =submit_tag tc(:merge)
