--- a/app/views/help/_result.html.haml
+++ b/app/views/help/_result.html.haml
@@ -1,3 +1,3 @@
 -url = url_for(:controller=>:help, :action=>:show, :id=>result[:name])
-=link_to_remote(wikize(result[:title], :without_paragraph=>true), {:url=>url, :update=>:helpage, :method=>:get}, :href=>url)
+=link_to wikize(result[:title], :without_paragraph=>true), url, :remote=>true, "data-update"=>"#helpage", "data-type"=>:html
 %span.pertinence=tc(:pertinence, :value=>result[:pertinence].to_s)
