--- a/app/views/help/_search.html.haml
+++ b/app/views/help/_search.html.haml
@@ -1,14 +1,11 @@
 -article = search
--update, complete, resize = "help", "resize2(); return true", nil
--if params[:dialog]
-  -update, complete, resize = "#{params[:dialog]}-help", "$('#{params[:dialog]}').resize()", params[:dialog]
--base_url = {:controller=>:help}
+-base_url = {:controller=>:help, :action=>:show}
 -base_url[:dialog] = params[:dialog] if params[:dialog]
 -#cache(:controller=>:help, :action=>:show, :locale=>::I18n.locale, :id=>article.split(/[^a-z0-9\-]/)[-2]) do
 -cache(article) do
   .content.flex{:style=>'overflow:auto;'}
     -if article.is_a? String
-      =article(article, :update=>update, :complete=>complete, :url=>base_url.merge(:action=>:show))
+      =article(article, "data-update"=>"#help", :url=>base_url)
     -else
       %h1=tc("missing_help")
       .help-error=tc(:error_no_file, :article=>article.to_s)
