--- a/app/views/land_parcels/_subdivision_form.html.haml
+++ b/app/views/land_parcels/_subdivision_form.html.haml
@@ -1,9 +1,9 @@
 -id="k"+rand.to_s[2..-1]
--measure = @land_parcel.area_measure-params[:used].to_f
+-measure = @land_parcel.area_measure-params["used-area"].to_f
 -measure = 0 if measure < 0 or params[:mode] != "new-line"
 %tr.odd{:id=>id}
-  %td=text_field_tag("subdivisions[#{id}][name]", (params[:name]||@land_parcel.name).succ, :id=>"subdivisions_#{id}_name")
-  %td=text_field_tag("subdivisions[#{id}][area_measure]", measure, :class=>"area", :onkeyup=>"t5()")+@land_parcel.area_unit.name
-  %td.act=link_to_remote(tl(:add), {:url=>{:action=>:divide, :controller=>:land_parcels, :mode=>"new-line", :id=>@land_parcel.id}, :with=>"'used='+$('total_area').innerHTML+'&name='+encodeURIComponent($('subdivisions_#{id}_name').value)", :update=>:subdivisions, :position=>:bottom, :complete=>"t5()"}, :class=>"icon im-new")
-  %td.act=link_to_function(tl(:delete), "$('#{id}').remove(); t5();", :class=>"icon im-delete") if params[:mode] == "new-line"
+  %td=text_field_tag("subdivisions[#{id}][name]", (params[:name]||@land_parcel.name).succ, :id=>"subdivisions_#{id}_name", "data-parameter-name"=>"name")
+  %td=text_field_tag("subdivisions[#{id}][area_measure]", measure, :class=>"area")+@land_parcel.area_unit.name
 
+  %td.act=link_to(tl(:add), {:action=>:divide, :controller=>:land_parcels, :mode=>"new-line", :id=>@land_parcel.id}, :remote=>true, "data-with"=>"#used-area, #subdivisions_#{id}_name", "data-update"=>"#subdivisions", "data-update-at"=>:bottom, "data-type"=>"html", :class=>"icon im-new")
+  %td.act=link_to(tl(:delete), "#", "data-remove"=>"##{id}", :class=>"icon im-delete") if params[:mode] == "new-line"
