--- a/app/views/listings/_node.html.haml
+++ b/app/views/listings/_node.html.haml
@@ -9,11 +9,11 @@
               =link_to_function(node.label, "toggleElement('#{node.key}')")
               %span.attribute="(#{node.name})"
             %td
-              =form_remote_tag(:url=>{:controller=>:listing_nodes, :action=>:create, :parent_id=>node.id}, :update=>node.key, :loading=>"onLoading();", :loaded=>"onLoaded();", :class=>:content) do
+              =form_tag({:controller=>:listing_nodes, :action=>:create, :parent_id=>node.id}, "data-update"=>"##{node.key}", "data-type"=>:html, :class=>:content) do
                 =select_tag(:nature, grouped_options_for_select(node.available_nodes))
                 =submit_tag(tg(:add))
           -else
-            %td.export=check_box_tag(:listing_node, :exportable, node.exportable, :onclick=>remote_function(:url=>{:action=>:update, :controller=>:listing_nodes, :id=>node.id, :type=>node.exportable ? "hide" : "show"}) )
+            %td.export=check_box_tag(:exportable, "1", node.exportable, "data-remote"=>true, "data-url"=>url_for(:action=>:update, :controller=>:listing_nodes, :id=>node.id, :type=>"exportable"), "data-method"=>"put")
             %td.link.label{:id=>"#{node.key}_label"}
               =render(:partial=>"listing_nodes/column_label", :object=>node)
               
@@ -22,7 +22,7 @@
             -unless node.reflection?
               %td.item-tool.position{:id=>"#{node.key}_position"}=render(:partial=>"listing_nodes/position", :object=>node)
             %td.item-tool.delete
-              =link_to_remote(tg(:delete), {:url=>{:action=>:destroy, :controller=>:listing_nodes, :id=>node.id}, :update=>node.parent.key, :loading=>"onLoading();", :method=>:delete, :loaded=>"onLoaded();"}, :class=>"icon im-delete")
+              =link_to(tg(:delete), {:action=>:destroy, :controller=>:listing_nodes, :id=>node.id}, "data-update"=>node.parent.key, "data-type"=>:html, :method=>:delete, :class=>"icon im-delete")
 
 -if node.reflection?
   .branches{:id=>node.key}=render(:partial=>"listings/reflection", :object=>node)
