--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,7 +9,7 @@
     -#=javascript_include_tag "dyke"
     -#=javascript_include_tag "list"
     =formize_include_tag
-    =javascript_include_tag "combo_box", "support", "ui"
+    =javascript_include_tag "combo_box", "list-jquery", "support", "ui"
     =theme_link_tag(@current_theme)
   -expiration = {}
   -expiration = {"timeout"=>session[:expiration], "timeout-href"=>renew_session_url(:name=>@current_user.name)} if @current_user and session[:expiration].to_i>0
