--- a/app/views/mandates/configure.html.haml
+++ b/app/views/mandates/configure.html.haml
@@ -9,7 +9,7 @@
         %tr{:class=>cycle('odd', 'even')}
           %td=tc "column_#{column}"
           %td=select_tag     "columns[#{column}][filter]", options_for_select(@filters)
-          %td=text_field_tag "columns[#{column}][search]", nil, "data-autocomplete"=>url_for(:controller=>:interfacers, :action=>"autocomplete_for_mandate_#{column}")
+          %td=text_field_tag "columns[#{column}][search]", nil, "data-autocompletion"=>url_for(:controller=>:interfacers, :action=>"autocomplete_for_mandate_#{column}")
           %td=check_box_tag  "columns[#{column}][update]"
           %td=text_field_tag "columns[#{column}][new_value]"
   .actions
