--- a/app/views/stock_transfers/_form.html.haml
+++ b/app/views/stock_transfers/_form.html.haml
@@ -2,7 +2,7 @@
 =formalize do |f|
   -f.error :stock_transfer 
   -if @stock_transfer.new_record?
-    -f.field :stock_transfer, :nature, :field=>:radio, :choices=>StockTransfer.natures.collect{|n| [n[0], n[1], "data-show"=>"##{n[1]}_options"]}
+    -f.field :stock_transfer, :nature, :field=>:radio, :choices=>StockTransfer.natures.collect{|n| [n[0], n[1], {"data-show"=>"##{n[1]}_options"}]}
   -else
     -f.field :stock_transfer, :nature, :field=>:label
   -f.field :stock_transfer, :product_id, :choices=>{:reflection=>:available_products}, :new=>true
