--- a/app/views/entity_link_natures/_form.html.haml
+++ b/app/views/entity_link_natures/_form.html.haml
@@ -1,7 +1,7 @@
 =formalize do |f|
   -f.error :entity_link_nature
   -f.field :entity_link_nature, :name
-  -f.field :entity_link_nature, :symmetric, "data-show"=>"#reverse-name"
+  -f.field :entity_link_nature, :symmetric, "data-hide"=>"#reverse-name"
   -f.field :entity_link_nature, :propagate_contacts
   -f.field :entity_link_nature, :name_1_to_2
 #reverse-name
