--- a/app/views/prices/index.html.haml
+++ b/app/views/prices/index.html.haml
@@ -8,7 +8,7 @@
       =submit_tag tg('filter')
 =toolbar do |t|
   -t.link :new_sales_price, {:action=>:new, :mode=>:sales}
-  -t.link :new_purchases_price, {:action=>:new, :mode=>:purchases}
+  -t.link :new_purchase_price, {:action=>:new, :mode=>:purchases}
   -t.link :export
   -t.link :import
 =list
