--- a/app/views/entities/export.html.haml
+++ b/app/views/entities/export.html.haml
@@ -39,7 +39,7 @@
         -f.title :add_conditions
         -f.field tc('check'), {:choices=>[[tc(:all_conditions), :and], [tc(:one_condition), :or]], :datatype=>:radio, :name=>:check, :value=>params[:check]||:and}
       .fastadd
-        =select_tag("condition", options_for_select(@conditions.collect{|x| [condition_label(x), x]}))
+        =select_tag("condition", options_for_select(@conditions.collect{|x| [condition_label(x), x]}.sort{|a,b| a[0]<=>b[0]}))
         =link_to(tc(:add_condition), {:action=>:export}, :remote=>true, "data-update"=>"#conditions", "data-update-at"=>:bottom, "data-type"=>:html, "data-with"=>"#condition")
       #conditions
       .end
