--- a/app/views/incoming_deliveries/index.html.haml
+++ b/app/views/incoming_deliveries/index.html.haml
@@ -1,3 +1,3 @@
 =kujaku do |k|
-  -k.radio :unconfirmed, :confirmed, :all
+  -k.radio :unconfirmed, :confirmed, :all, :i18n_root=>"labels.criterion_modes."
 =list
