--- a/app/views/incoming_payment_uses/_form.html.haml
+++ b/app/views/incoming_payment_uses/_form.html.haml
@@ -1,3 +1,6 @@
+-expense = @incoming_payment_use.expense
+=subheading :attach_an_incoming_payment_to_expense, :type=>expense.class.model_name.human, :number=>expense.number, :label=>expense.label
+
 =formalize do |f|
   -f.error 'incoming_payment_use'
   -f.field :incoming_payment_use, :downpayment
