--- a/app/views/outgoing_payment_uses/_form.html.haml
+++ b/app/views/outgoing_payment_uses/_form.html.haml
@@ -1,3 +1,6 @@
+-expense = @outgoing_payment_use.expense
+=subheading :attach_an_outgoing_payment_to_expense, :number=>expense.number, :type=>expense.class.model_name.human
+
 =formalize do |f|
   -f.error 'outgoing_payment_use'
   -f.field :outgoing_payment_use, :downpayment
