--- a/app/views/sales/show.html.haml
+++ b/app/views/sales/show.html.haml
@@ -67,7 +67,7 @@
 -if ["products", "summary", ""].include? params[:step].to_s
   %h2=tc :incoming_payments
   =toolbar do |t|
-    -t.link(:new, :controller=>:incoming_payment_uses, :expense_type=>:sale, :expense_id=>@sale.id) unless @sale.unpaid_amount.zero?
+    -t.link(:new, :controller=>:incoming_payment_uses, :expense_type=>:sale, :expense_id=>@sale.id, :i18n=>{:label=>@sale.label}) unless @sale.unpaid_amount.zero?
   =list :payment_uses
 
       
