Back to Libxml 1.1.3 and fixes bug on deposits/new

--- a/app/views/deposits/_form.html.haml
+++ b/app/views/deposits/_form.html.haml
@@ -1,5 +1,5 @@
 -if @deposit.new_record?
-  =subheading :new_deposit, :mode=>@deposit.mode.name, :count=>mode.depositable_payments.size
+  =subheading :new_deposit, :mode=>@deposit.mode.name, :count=>@deposit.mode.depositable_payments.size
 
 =formalize do |f|
   - f.error :deposit
