--- a/app/views/sales/index.html.haml
+++ b/app/views/sales/index.html.haml
@@ -1,8 +1,12 @@
 =kujaku do |k|
   -k.text
   -k.radio :all, :current, :unpaid
+  -k.criterion do
+    %label=Sale.human_attribute_name(:responsible)
+    =select_tag(:responsible_id, options_for_select([[]]+@current_company.users.collect{|u| [u.label, u.id]}, params[:responsible_id]))
+
 =toolbar do |t|
   -t.link :new
   -t.link :statistics
-  -#t.link :unpaid_sales_export
+
 =list
