--- a/app/views/products/_form.html.haml
+++ b/app/views/products/_form.html.haml
@@ -37,7 +37,7 @@
       -f.field :stock, :quantity_min
       -f.field :stock, :critic_quantity_min
       -f.field :stock, :quantity_max
-      -if @warehouses.size > 1
+      -if @current_company.warehouses.size > 1
         -f.field :stock, :warehouse_id, :choices=>{:reflection=>:warehouses}, :new=>true
 
 -#price=render :partial=>'price_amount_form'
